# hardware-lungsound

./: README.md
firmware/: CMakeLists.txt  usb_microphone.c
